--- a/gradle/libs.versions.toml
+++ b/gradle/libs.versions.toml
@@ -6,7 +6,8 @@ kotlin-logging = "7.0.7"
 slf4j = "2.0.7"
 kotlin-compiler = "2.0.21"
 okio = "3.16.0"
-kotest = "5.9.1"
+kotest = "6.0.3"
+kotest-bdd = "2.0.0"
 
 [libraries]
 kotlinx-coroutines-core = { module = "org.jetbrains.kotlinx:kotlinx-coroutines-core", version.ref = "kotlinx-coroutines" }
@@ -21,6 +22,7 @@ okio = { module = "com.squareup.okio:okio", version.ref = "okio" }
 kotest-framework-engine = { module = "io.kotest:kotest-framework-engine", version.ref = "kotest" }
 kotest-assertions-core = { module = "io.kotest:kotest-assertions-core", version.ref = "kotest" }
 kotest-runner-junit5 = { module = "io.kotest:kotest-runner-junit5", version.ref = "kotest" }
+ktool-kotest-bdd = { module = "dev.ktool:kotest-bdd", version.ref = "kotest-bdd" }
 
 [plugins]
 kotlin-multiplatform = { id = "org.jetbrains.kotlin.multiplatform", version.ref = "kotlin" }
