--- a/gradle/libs.versions.toml
+++ b/gradle/libs.versions.toml
@@ -7,9 +7,14 @@ slf4j = "2.0.7"
 okio = "3.16.0"
 kotest = "6.0.3"
 kotest-bdd = "2.0.1"
-kotlin-gen = "0.1.5"
+kotlin-gen = "0.2.1"
 ksp = "2.2.20-2.0.3"
 ktor = "3.3.0"
+javalin = "6.0.0"
+maven = "3.9.0"
+maven-plugin-tools = "3.9.0"
+spring = "6.1.0"
+jakarta-servlet = "6.0.0"
 
 [libraries]
 kotlinx-coroutines-core = { module = "org.jetbrains.kotlinx:kotlinx-coroutines-core", version.ref = "kotlinx-coroutines" }
@@ -33,6 +38,12 @@ ktor-server-cio = { module = "io.ktor:ktor-server-cio", version.ref = "ktor" }
 ktor-client-curl = { module = "io.ktor:ktor-client-curl", version.ref = "ktor" }
 ktor-client-okhttp = { module = "io.ktor:ktor-client-okhttp-jvm", version.ref = "ktor" }
 ktor-server-status = { module = "io.ktor:ktor-server-status-pages", version.ref = "ktor" }
+javalin = { module = "io.javalin:javalin", version.ref = "javalin" }
+maven-plugin-api = { module = "org.apache.maven:maven-plugin-api", version.ref = "maven" }
+maven-core = { module = "org.apache.maven:maven-core", version.ref = "maven" }
+maven-plugin-annotations = { module = "org.apache.maven.plugin-tools:maven-plugin-annotations", version.ref = "maven-plugin-tools" }
+spring-webmvc = { module = "org.springframework:spring-webmvc", version.ref = "spring" }
+jakarta-servlet-api = { module = "jakarta.servlet:jakarta.servlet-api", version.ref = "jakarta-servlet" }
 
 [plugins]
 kotlin-multiplatform = { id = "org.jetbrains.kotlin.multiplatform", version.ref = "kotlin" }
