Setting JVM plugin version

--- a/gradle/libs.versions.toml
+++ b/gradle/libs.versions.toml
@@ -47,5 +47,6 @@ jakarta-servlet-api = { module = "jakarta.servlet:jakarta.servlet-api", version.
 
 [plugins]
 kotlin-multiplatform = { id = "org.jetbrains.kotlin.multiplatform", version.ref = "kotlin" }
+kotlin-jvm = { id = "org.jetbrains.kotlin.jvm", version.ref = "kotlin" }
 kotest = { id = "io.kotest", version.ref = "kotest" }
 ksp = { id = "com.google.devtools.ksp", version.ref = "ksp" }
