--- a/.github/workflows/ci.yaml
+++ b/.github/workflows/ci.yaml
@@ -11,8 +11,8 @@ jobs:
     name: Build and Test
     runs-on: ubuntu-latest
     permissions:
-      contents: read
-      checks: read
+      contents: write
+      checks: write
 
     steps:
       - uses: actions/checkout@v4
