--- a/gradle.properties
+++ b/gradle.properties
@@ -1,2 +1,12 @@
 kotlin.code.style=official
 kotest.framework.classpath.scanning.autoscan.disable=true
+# Publishing configuration
+version=0.0.1
+group=dev.ktml
+inception.year=2025
+github.org=ktool-dev
+developer.id=ktool-dev
+developer.name=KTool Devs
+developer.email=aaron@ktool.dev
+license.name="The Apache License, Version 2.0"
+license.url="http://www.apache.org/licenses/LICENSE-2.0.txt"
