--- a/gradle.properties
+++ b/gradle.properties
@@ -4,9 +4,11 @@ kotest.framework.classpath.scanning.autoscan.disable=true
 version=0.0.1
 group=dev.ktml
 inception.year=2025
+scm.org.url=https://github.com/ktool-dev
+scm.repo.path=github.com/ktool-dev/ktml
 github.org=ktool-dev
-developer.id=ktool-dev
-developer.name=KTool Devs
+developer.id=aaronfreeman
+developer.name=Aaron Freeman
 developer.email=aaron@ktool.dev
 license.name="The Apache License, Version 2.0"
 license.url="http://www.apache.org/licenses/LICENSE-2.0.txt"
