--- a/gradle.properties
+++ b/gradle.properties
@@ -1,5 +1,6 @@
 kotlin.code.style=official
 kotest.framework.classpath.scanning.autoscan.disable=true
+org.gradle.jvmargs=-Xmx1g
 # Publishing configuration
 version=0.0.1
 group=dev.ktml
